3.35-1 svytable() could give an integer overflow with a replicate-weight design having integer weights,
       such as CHIS.  (Elizabeth Purdom)

       empty factor levels in the strata= argument to svydesign() no longer create strata

3.35   The use of RODBC is DEPRECATED. If possible, I want to move to just supporting the R-DBI
       interface; you can use ODBC connections with the DBI-compatible 'odbc' package

       Some instances of deparse() needed to be paste(deparse(), collapse=""), notably in svyciprop() (Boris Fazio)

       Fix to svycontrast had broken the no-names case (Brian Miner)

       More helpful error message with missing values in replicate weights (Antony Damico)

       svyglm() now uses match.call() rather than sys.call() for storing the call (for Michael Laviolette)

       svystandardize() now takes over=~1 for the whole population (for Michael Laviolette)

       svycralpha() does Cronbach's alpha (for Franziska Kößler)

       many tests based on the printed output are moved to tests/testoutput because they
       differ trivially between platforms and so aren't CRAN-compliant.

3.34   removed duplicate definition of svycontrast.svystat

       fix match.names() for the case of all the same names in different order (Sebastien Lucie)

       make rescaling of weights optional in svyglm and svycoxph (Greg Ridgeway)

       USER VISIBLE CHANGE: default rescaling of weights in svyglm and svycoxph with replicate
       weights is now mean=1, as it always was with svydesign objects, rather than sum=1.
       This does not affect estimates or tests or comparisons, but the AIC and its effective
       degrees of freedom will look more plausible, as will the deviance.

       Fix handling of missing data for calibrated designs in svyranktest (for Brad Biggerstaff)

       handle empty subsets in onestage, because svyby().  (for Greg Freedman)

       allow offset() in svymle()   (Patrick Brown)
